# crates-io-header-anomalies

./: Cargo.toml
src/: main.rs
