[package]
name = "crates-io-header-anomalies"
version = "0.1.0"
authors = ["Sven Marnach <sven@marnach.net>"]
edition = "2018"
repository = "https://github.com/smarnach/crates-io-header-anomalies"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
rayon = "1.2.0"
reqwest = "0.9.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.40"
walkdir = "2.2.9"
